tests-system/tutorial-1/output
Requirement fuel {
            ^^^^ tutorial-1/car.trlc:13: error: required component critical (see model.rsl:5) is not defined
Processed 1 model and 1 requirement file and found 1 error
